2015-09-01 Fixed issue with earlier end of movie in Video module
2015-08-27 Fixed issue with draggable element in Text module
2015-08-25 Fixed issue with receiving state without droppedElements in Text module
2015-08-25 Added Show Answers mode in Hangman module
2015-08-25 Fixed getting maxScore by page name on page loaded event.
2015-08-24 Fixed problem with displaying initial image after reset in Animated Page Progress module
2015-08-21 Fixed problem with dragging in Slider module
2015-08-21 Fixed problem with checking answers in Basic Math Gaps and Table modules
2015-08-21 Added updating ranges on check in Animated Page Progress module
2015-08-21 Fixed sending score in event in Multiple Gap module
2015-08-20 Fixed adding classes to previous and next buttons in Navigation Bar module
2015-08-19 Added sending ValueChanged event in Limited Reset module
2015-08-19 Fixed issue with showing answers in check mode in Hangman module.
2015-08-18 Added navigating to page by number in Go To Page Button module
2015-08-18 Fixed issue with checking in not activity mode in Line Number module
2015-08-18 Updated Swiffy library to version 7.3.0
2015-08-13 Fixed issue with wrong position of draggable item in Source List module
2015-08-13 Fixed issue with error in setting state on mLibro in IWB Toolbar module
2015-08-13 Fixed issue with playing audio and video after clicking in dropdown button in Audio, TextAudio and Video modules
2015-08-12 Added handling draggable object with HTML structure and classes from Source List in Basic Math Gaps, Table and Text
2015-08-12 Added getting HTML structure and css classes from Source List in draggable object
2015-08-11 Fixed issue with adding images in Animated Page Progress module
2015-08-07 Added adding equals sign in Writing Calculation module
2015-08-07 Fixed issue with checking answers with white spaces in Basic Math Gaps module
2015-08-07 Fixed issue with checking answer in editor Preview