@@ -1044,6 +1044,7 @@
     "Show_Answers_name": "Afficher les réponses",
     "Show_Answers_property_text": "Texte",
     "Show_Answers_property_text_selected": "Texte sélectionné",
+    "Show_Answers_property_enable_check_counter": "Increment check counter",
     "Animated_Page_Progress_info": "Permet d'insérer des pages de progression animées qui affichent des images en fonction du résultat en pourcentage obtenu dans la page.",
     "Animated_Page_Progress_name": "Progression de la page animée",
     "Animated_Page_Progress_property_ranges": "Etendues",
